Fixes location display on backoffice

--- a/.gitignore
+++ b/.gitignore
@@ -3669,3 +3669,4 @@ image/catalog/product/9/6/96.jpg
 image/catalog/product/9/7/97.jpg
 image/catalog/product/9/8/98.jpg
 image/catalog/product/9/9/99.jpg
+image/cache/catalog/tekhnikus-logo-1593526367-400x400.jpg
