--- a/.gitignore
+++ b/.gitignore
@@ -2616,3 +2616,101 @@ image/catalog/product/9/6/96.jpg
 image/catalog/product/9/7/97.jpg
 image/catalog/product/9/8/98.jpg
 image/catalog/product/9/9/99.jpg
+image/cache/catalog/category/58-160x160.jpg
+image/cache/catalog/product/1/2/2/122-400x400.jpg
+image/cache/catalog/product/1/2/3/123-400x400.jpg
+image/cache/catalog/product/1/2/4/124-400x400.jpg
+image/cache/catalog/product/1/2/5/125-400x400.jpg
+image/cache/catalog/product/1/2/9/129-400x400.jpg
+image/cache/catalog/product/1/2/9/129-800x800.jpg
+image/cache/catalog/product/1/2/9/129-1200x1200.jpg
+image/cache/catalog/product/1/4/0/140-400x400.jpg
+image/cache/catalog/product/1/4/1/141-400x400.jpg
+image/cache/catalog/product/1/4/5/145-400x400.jpg
+image/cache/catalog/product/1/4/5/145-800x800.jpg
+image/cache/catalog/product/1/4/5/145-1200x1200.jpg
+image/cache/catalog/product/1/4/6/146-80x80.jpg
+image/cache/catalog/product/1/4/6/146-1200x1200.jpg
+image/cache/catalog/product/1/4/7/147-400x400.jpg
+image/cache/catalog/product/1/4/9/149-400x400.jpg
+image/cache/catalog/product/1/5/6/156-400x400.jpg
+image/cache/catalog/product/1/6/3/163-400x400.jpg
+image/cache/catalog/product/1/6/5/165-400x400.jpg
+image/cache/catalog/product/1/7/6/176-400x400.jpg
+image/cache/catalog/product/1/7/7/177-400x400.jpg
+image/cache/catalog/product/1/8/3/183-400x400.jpg
+image/cache/catalog/product/1/8/6/186-400x400.jpg
+image/cache/catalog/product/1/9/0/190-400x400.jpg
+image/cache/catalog/product/1/9/4/194-400x400.jpg
+image/cache/catalog/product/1/9/6/196-400x400.jpg
+image/cache/catalog/product/1/9/7/197-400x400.jpg
+image/cache/catalog/product/1/9/9/199-400x400.jpg
+image/cache/catalog/product/2/0/0/200-400x400.jpg
+image/cache/catalog/product/2/1/3/213-40x40.jpg
+image/cache/catalog/product/2/1/3/213-100x100.jpg
+image/cache/catalog/product/2/1/3/213-400x400.jpg
+image/cache/catalog/product/2/1/3/213-800x800.jpg
+image/cache/catalog/product/2/1/3/213-1200x1200.jpg
+image/cache/catalog/product/2/2/5/225-400x400.jpg
+image/cache/catalog/product/2/2/6/226-400x400.jpg
+image/cache/catalog/product/2/2/7/227-400x400.jpg
+image/cache/catalog/product/2/2/8/228-400x400.jpg
+image/cache/catalog/product/2/3/1/231-400x400.jpg
+image/cache/catalog/product/2/3/2/232-400x400.jpg
+image/cache/catalog/product/2/3/3/233-400x400.jpg
+image/cache/catalog/product/2/3/6/236-400x400.jpg
+image/cache/catalog/product/2/4/0/240-400x400.jpg
+image/cache/catalog/product/2/4/2/242-400x400.jpg
+image/cache/catalog/product/2/4/5/245-400x400.jpg
+image/cache/catalog/product/2/4/6/246-400x400.jpg
+image/cache/catalog/product/2/6/5/265-400x400.jpg
+image/cache/catalog/product/2/7/4/274-400x400.jpg
+image/cache/catalog/product/2/7/6/276-400x400.jpg
+image/cache/catalog/product/2/7/8/278-400x400.jpg
+image/cache/catalog/product/2/8/1/281-400x400.jpg
+image/cache/catalog/product/2/8/9/289-400x400.jpg
+image/cache/catalog/product/2/9/0/290-400x400.jpg
+image/cache/catalog/product/3/1/3/313-400x400.jpg
+image/cache/catalog/product/3/1/8/318-400x400.jpg
+image/cache/catalog/product/5/0/7/507-400x400.jpg
+image/cache/catalog/product/5/1/3/513-400x400.jpg
+image/cache/catalog/product/5/1/7/517-400x400.jpg
+image/cache/catalog/product/5/1/8/518-400x400.jpg
+image/cache/catalog/product/5/4/2/542-400x400.jpg
+image/cache/webp/no_image-100x100.webp
+image/cache/webp/catalog/category/58-160x160.webp
+image/cache/webp/catalog/product/1/4/5/145-800x800.webp
+image/cache/webp/catalog/product/1/4/6/146-80x80.webp
+image/cache/webp/catalog/product/1/4/6/146-1200x1200.webp
+image/cache/webp/catalog/product/2/1/3/213-40x40.webp
+image/cache/webp/catalog/product/2/1/3/213-100x100.webp
+image/cache/catalog/product/1/1-400x400.jpg
+image/cache/catalog/product/1/3/13-400x400.jpg
+image/cache/catalog/product/2/0/2/202-400x400.jpg
+image/cache/catalog/product/2/1/4/214-400x400.jpg
+image/cache/catalog/product/2/3/6/236-800x800.jpg
+image/cache/catalog/product/2/3/6/236-1200x1200.jpg
+image/cache/catalog/product/2/3/7/237-400x400.jpg
+image/cache/catalog/product/2/4/1/241-400x400.jpg
+image/cache/catalog/product/2/9/5/295-400x400.jpg
+image/cache/catalog/product/2/9/6/296-400x400.jpg
+image/cache/catalog/product/3/0/0/300-400x400.jpg
+image/cache/catalog/product/3/0/5/305-400x400.jpg
+image/cache/catalog/product/3/0/7/307-400x400.jpg
+image/cache/catalog/product/3/2/5/325-400x400.jpg
+image/cache/catalog/product/4/3/5/435-400x400.jpg
+image/cache/catalog/product/4/4/9/449-400x400.jpg
+image/cache/catalog/product/5/5/1/551-400x400.jpg
+image/cache/catalog/product/6/3/6/636-400x400.jpg
+image/cache/catalog/product/6/6/66-400x400.jpg
+image/cache/catalog/product/6/8/5/685-400x400.jpg
+image/cache/catalog/product/6/8/6/686-400x400.jpg
+image/cache/catalog/product/6/8/7/687-400x400.jpg
+image/cache/catalog/product/7/0/70-400x400.jpg
+image/cache/catalog/product/7/3/73-400x400.jpg
+image/cache/catalog/product/7/5/75-400x400.jpg
+image/cache/catalog/product/7/8/78-400x400.jpg
+image/cache/catalog/product/7/9/79-400x400.jpg
+image/cache/catalog/product/8/6/86-400x400.jpg
+image/cache/catalog/product/9/9-400x400.jpg
+image/cache/catalog/product/9/8/98-400x400.jpg
