MOD: Twig templates to animate price

--- a/.gitignore
+++ b/.gitignore
@@ -2714,3 +2714,8 @@ image/cache/catalog/product/7/9/79-400x400.jpg
 image/cache/catalog/product/8/6/86-400x400.jpg
 image/cache/catalog/product/9/9-400x400.jpg
 image/cache/catalog/product/9/8/98-400x400.jpg
+image/cache/catalog/product/1/2/2/122-800x800.jpg
+image/cache/catalog/product/1/2/2/122-1200x1200.jpg
+image/cache/catalog/product/1/6/5/165-800x800.jpg
+image/cache/catalog/product/1/6/5/165-1200x1200.jpg
+image/cache/webp/catalog/product/1/2/2/122-800x800.webp
