FIX: JS countdown timer display on quantity dicount

--- a/.gitignore
+++ b/.gitignore
@@ -2719,3 +2719,8 @@ image/cache/catalog/product/1/2/2/122-1200x1200.jpg
 image/cache/catalog/product/1/6/5/165-800x800.jpg
 image/cache/catalog/product/1/6/5/165-1200x1200.jpg
 image/cache/webp/catalog/product/1/2/2/122-800x800.webp
+image/cache/catalog/product/1/6/1/161-400x400.jpg
+image/cache/catalog/product/1/9/8/198-400x400.jpg
+image/cache/catalog/product/3/1/2/312-400x400.jpg
+image/cache/catalog/product/3/4/9/349-400x400.jpg
+image/cache/catalog/product/6/7/6/676-400x400.jpg
